# fritz-pod

./: .containerignore  .gitignore  Containerfile.base  Containerfile.podmanagement  Containerfile.rfid  Makefile  fritzpod.db  modify_mfrc522.sh  pyproject.toml
src/audio_player/app/: main.py
src/audio_player/app/backend/: session.py  settings.py
src/audio_player/app/routers/: play.py
src/audio_player/app/schemas/: play.py
src/audio_player/app/services/: player.py  pod_management.py
src/pod_management/: main.py  play_statistics.parquet  pyproject.toml
src/pod_management/app/: constants.py  dependencies.py  main.py
src/pod_management/app/api/endpoints/: download.py  play_statistic.py  rfid_card.py
src/pod_management/app/api/models/: play_statistic.py  rfid_card.py
src/pod_management/app/crud/: play_statistic.py  rfid_card.py
src/pod_management/app/db/: session.py
src/pod_management/app/db/models/: play_statistic.py  rfid_card.py
src/pod_management/app/static/: index.html
src/rfid_service/: api_client.py  main.py  pyproject.toml  rfid_reader.py  rfid_service.py  rfid_writer.py
