[tool.poetry]
name = "fritz-pod"
version = "0.1.0"
description = "Phony like box for playing audio files"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fritz_pod", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
spidev = "^3.6"
mfrc522 = "^0.0.7"
sqlalchemy = {extras = ["asyncio", "mypy"], version = "^2.0.28"}
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
